test/official_tests/super/extra_arguments.lox
class Base {
  foo(a, b) {
    print "Base.foo(" + a + ", " + b + ")";
  }
}

class Derived < Base {
  foo() {
    print "Derived.foo()"; // expect: Derived.foo()
    super.foo("a", "b", "c", "d"); // error: {"line":10,"message":"Function 'foo' expected 2 arguments but got 4","type":"RuntimeError"}
  }
}

Derived().foo();
